fix navmenu getting being behind about us section with z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ h1, h2 {
 header {
     position: sticky;
     top: 0;
+    z-index: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
